fix of subcategory in field along with overlap of ui in department location and made some changes in repair ui

--- a/src/Component/DataTable/DataTable.css
+++ b/src/Component/DataTable/DataTable.css
@@ -103,7 +103,7 @@ ol li {
 }
 .universal__table--input {
   border: none;
-  padding: 5px 20px 5px 0px;
+  padding: 5px 20px 5px 5px;
   outline: none;
   font-size: 14px;
 }
@@ -122,7 +122,7 @@ ol li {
 .universal__td--border {
   border: 1px solid var(--blue);
   padding: 0 !important;
-  width: 50%;
+  /* width: 50%; */
 }
 
 .universal__FormButton button {
